EXTRA_DIST =				\
	champlain-perl.h		\
	Makefile			\
	Makefile.in			\
	MANIFEST			\
	maps				\
	README				\
	Changes				\
	Makefile.am			\
	Makefile.PL			\
	MANIFEST.SKIP			\
	maps-gtk			\
	examples/animated-marker.pl	\
	examples/capitals.pl		\
	examples/flickr.pl		\
	examples/gtk2.pl		\
	examples/image.pl		\
	examples/launcher.pl		\
	examples/polygons.pl		\
	examples/images/flickr.png	\
	examples/images/who.png		\
	lib/Champlain.pm		\
	t/ChamplainBaseMarker.t		\
	t/ChamplainMapSource.t		\
	t/ChamplainPolygon.t		\
	t/ChamplainView.t		\
	t/ChamplainLayer.t		\
	t/ChamplainMarker.t		\
	t/ChamplainSelectionLayer.t	\
	t/ChamplainZoomLevel.t		\
	t/ChamplainMapSourceDesc.t	\
	t/ChamplainNetworkMapSource.t	\
	t/Champlain.t			\
	t/Gtk2ChamplainEmbed.t		\
	t/ChamplainMapSourceFactory.t	\
	t/ChamplainPoint.t		\
	t/ChamplainTile.t		\
	xs/ChamplainBaseMarker.xs	\
	xs/ChamplainMapSourceFactory.xs	\
	xs/ChamplainPoint.xs		\
	xs/ChamplainView.xs		\
	xs/ChamplainCache.xs		\
	xs/ChamplainMapSource.xs	\
	xs/ChamplainPolygon.xs		\
	xs/Champlain.xs			\
	xs/ChamplainLayer.xs		\
	xs/ChamplainMarker.xs		\
	xs/ChamplainSelectionLayer.xs	\
	xs/ChamplainZoomLevel.xs	\
	xs/ChamplainMapSourceDesc.xs	\
	xs/ChamplainNetworkMapSource.xs	\
	xs/ChamplainTile.xs		\
	xs/Gtk2ChamplainEmbed.xs

