EXTRA_DIST = \
	champlain-perl.h \
	Changes \
	COPYING \
	examples/animated-marker.pl \
	examples/capitals.pl \
	examples/flickr.pl \
	examples/image.pl \
	examples/images/flickr.png \
	examples/images/who.png \
	examples/launcher.pl \
	examples/polygons.pl \
	lib/Champlain.pm \
	Makefile.am \
	Makefile.PL \
	MANIFEST \
	MANIFEST.SKIP \
	maps \
	README \
	t/ChamplainBaseMarker.t \
	t/ChamplainLayer.t \
	t/ChamplainMapSourceDesc.t \
	t/ChamplainMapSourceFactory.t \
	t/ChamplainMapSource.t \
	t/ChamplainMarker.t \
	t/ChamplainNetworkMapSource.t \
	t/ChamplainPoint.t \
	t/ChamplainPolygon.t \
	t/ChamplainSelectionLayer.t \
	t/Champlain.t \
	t/ChamplainTile.t \
	t/ChamplainView.t \
	t/ChamplainZoomLevel.t \
	xs/ChamplainBaseMarker.xs \
	xs/ChamplainCache.xs \
	xs/ChamplainLayer.xs \
	xs/ChamplainMapSourceDesc.xs \
	xs/ChamplainMapSourceFactory.xs \
	xs/ChamplainMapSource.xs \
	xs/ChamplainMarker.xs \
	xs/ChamplainNetworkMapSource.xs \
	xs/ChamplainPoint.xs \
	xs/ChamplainPolygon.xs \
	xs/ChamplainSelectionLayer.xs \
	xs/ChamplainTile.xs \
	xs/ChamplainView.xs \
	xs/Champlain.xs \
	xs/ChamplainZoomLevel.xs
