
#champlain-0.6.vapi: $(top_srcdir)/champlain/Champlain-0.6.gir
#	$(VAPIGEN) --pkg atk --pkg gdk-2.0 --pkg clutter-1.0 --library champlain-0.6 $^
#	touch $@

vapidir = $(datadir)/vala/vapi

dist_vapi_DATA = \
	champlain-memphis-@CHAMPLAIN_API_VERSION@.vapi \
	champlain-memphis-@CHAMPLAIN_API_VERSION@.deps \
	$(NULL)

